manifests-openshift/deploy-acmeair-flightservice-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-flightservice
  labels:
    app.kubernetes.io/part-of: flight-service
    app: flight
    name: acmeair-flightservice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-flight-deployment
  template:
    metadata:
      labels:
        name: acmeair-flight-deployment
        app: flight
        version : v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name: acmeair-flightservice-java
        image: quay.io/abdouibm/acmeair-flightservice-java-3.3:new
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 100m
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-flight-service
  labels:
    app.kubernetes.io/part-of: flight-service
spec:
  ports:
    - port: 9080
      name: HTTP
  selector:
    name: acmeair-flight-deployment
---
##### Flight Database #####
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: acmeair-flight-db
  labels:
    app.kubernetes.io/part-of: flight-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-flight-db
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: acmeair-flight-db
        app: flight-db
        version: v1
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      volumes:
        - name: acmeair-flight-db-1
          emptyDir: {}
        - name: acmeair-flight-db-2
          emptyDir: {}
      containers:
      - image: quay.io/abdouibm/mongo:latest
        name: acmeair-flight-db
        ports:
        - containerPort: 27017
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: acmeair-flight-db-1
            mountPath: /data/configdb
          - name: acmeair-flight-db-2
            mountPath: /data/db
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: acmeair-flight-db
  labels:
    service: acmeair-flight-db
    app.kubernetes.io/part-of: flight-service
spec:
  ports:
  - name: HTTP
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: acmeair-flight-db
status:
  loadBalancer: {}
