manifests-openshift/acmeair-flightservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-flight-route
  labels:
    app.kubernetes.io/part-of: flight-service
spec:
  host: _HOST_
  path: /flight
  to:
    kind: Service
    name: acmeair-flight-service
  port:
    targetPort: 9080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
